Made cards inline-block so they would not jump down when transitioning. Fixed resize function to properly measure height as well as width.

--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -34,6 +34,7 @@
 }
 
 .h5p-flashcards .h5p-card {
+  display: inline-block;
   visibility: hidden;
   width: 100%;
   height: inherit;
